--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -4,10 +4,10 @@
 	<head>
 		<meta charset="utf-8">
 	   	<meta name="viewport" content="width=device-width, initial-scale=1">
-	   	<title>Espirales{% if site_name %} - {{ site_name }}{% endif %}</title>
+	   	<title>Mundo Cuotas{% if site_name %} - {{ site_name }}{% endif %}</title>
 		<meta name="description" content="{{ descripcion }}" />
 		<!-- Favicon -->
-		<link rel="shortcut icon" type="image/x-icon" href="{% static '' %}">
+		<link rel="shortcut icon" type="image/x-icon" href="{% static 'img/favicon.png' %}">
 		<!-- Bootstrap -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
