--- a/project/templates/products/partials/product_list.html
+++ b/project/templates/products/partials/product_list.html
@@ -4,6 +4,9 @@
   <tr>
     <th>Nombre</th>
     <th>Categoria</th>
+    <th>Estado</th>
+    <th>Tipo</th>
+    <th>Fecha</th>
     <th></th>
   </tr>
 {% endblock table_header %}
@@ -12,8 +15,27 @@
     {% if object_list %}
     {% for product in object_list %}
     <tr>
-      <td>{{ product.name }}</td>
+      <td>{{ product.name|truncatechars:35 }}</td>
       <td>{{ product.category }}</td>
+      <td>
+        {% if product.status == 1 %}
+          <span class="text-danger">No publicado</span>
+        {% elif product.status == 2 %}
+          <span class="text-success">Publicado</span>
+        {% endif %}
+      </td>
+
+      <td>
+        {% if product.type == 1 %}
+          Regular
+        {% elif product.type == 2 %}
+          Oferta
+        {% elif product.type == 3 %}
+          Destacado
+        {% endif %}
+      </td>
+
+      <td>{{ product.updated_at|date:"d/m/y H:i" }}</td>
       <td>
         <button class="btn btn-secondary btn-sm" hx-get="{% url 'products:product_detail' product.slug %}" hx-target="#dialog"><i class="fas fa-eye"></i></button>
         <button class="btn btn-success btn-sm" hx-get="{% url 'products:product_update' product.slug %}" hx-target="#dialog"><i class="fas fa-edit"></i></button>
