--- a/project/templates/components/navbar.html
+++ b/project/templates/components/navbar.html
@@ -8,7 +8,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     
-    <div class="collapse navbar-collapse justify-content-center justify-content-md-end text-center" id="navbarNav">
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <hr>
         <ul class="navbar-nav fs-5 fw-bolder" id="navbarList">
             <li class="nav-item scale">
@@ -73,6 +73,9 @@
             {% endif %}
         </ul>
     </div>
+    <li class="ms-3"><a class="text-body-secondary" href="#"><i class="fab fa-whatsapp fa-2x"></i></a></li>
+
+ 
 </div>
 
 
