--- a/project/templates/products/index.html
+++ b/project/templates/products/index.html
@@ -2,96 +2,105 @@
 {% load static %}
 
 {% block header %}
-
-<div class="px-4 text-center pt-5">
-    <img class="mx-auto m-3 d-block pt-4" src="{% static 'img/logo.png' %}" alt="" width="90">
-    <h1 class="display-5 fw-bold text-body-emphasis brand">
-        MUNDO CUOTAS</h1>
-    <div class="col-lg-6 mx-auto">
-      <h2 class="lead mb-4">Comprá en cuotas solo con tu firma en Tandil, Ayacucho y ayacucho</h2>
-      <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <form 
-            class="input-group search-navbar mx-0 mx-md-5 mt-4 mt-md-0 pb-4" 
-            action="?consult={{ consult }}" 
-        >
-            <input name="consult" class="form-control" type="text" placeholder="¿Que estas buscando?" />
-            <button class="btn btn-primary" id="button-search" type="submit">
-                <i class="fas fa-search"></i>
-            </button>
-        </form>   
-      </div>
+    <div class="p-4 text-center bg-header">
+        <img class="mx-auto m-3 d-block" src="{% static 'img/logo.png' %}" alt="" width="90">
+        <h1 class="display-5 fw-bold text-body-emphasis brand">
+            MUNDO CUOTAS</h1>
+        <div class="col-lg-6 mx-auto">
+        <h2 class="lead fw-normal mb-4">Comprá en cuotas solo con tu firma en Tandil, Ayacucho y ayacucho</h2>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+            <form 
+                class="input-group search-navbar mx-0 mx-md-5 mt-4 mt-md-0 pb-4" 
+                action="?consult={{ consult }}" 
+            >
+                <input name="consult" class="form-control" type="text" placeholder="¿Que estas buscando?" />
+                <button class="btn btn-primary" id="button-search" type="submit">
+                    <i class="fas fa-search"></i> Buscar
+                </button>
+            </form>   
+        </div>
+        </div>
     </div>
-  </div>
 {% endblock header %}
 
 {% block content %}
+    <section class="py-5">
 
-<div class="container">
-
-    <div>
-        <h2 class="fw-bolder fs-3 mb-4 text-uppercase text-start border-bottom">Productos destacatos</h1>
-
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-            {% for product in products %}
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="{{ product.files.first.file.url }}" class="card-img-top object-fit-contain bg-secondary" alt="{{ product.name }}" style="height: 200px;">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ product.name }}</h5>
-                            <p class="card-text">{{ product.description }}</p>
+        {% if offer_products %}
+            <div class="container px-4 px-lg-5 mt-2">
+                <h3 class="fw-semibold border-bottom text-uppercase fs-4">Productos en oferta</h3>
+                <div class="row gx-3 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-start">
+                    {% for product in offer_products %}
+                        <div class="col mb-5">
+                            <div class="card h-100">
+                                <img class="card-img-top object-fit-cover" src="{{ product.files.first.file.url }}" alt="{{ product.name}}" style="height: 160px;"/>
+                                <div class="card-body">
+                                    <div class="text-center">
+                                        <h4 class="fw-semibold">{{ product.name }}</h4>
+                                        {% if product.price %}
+                                            <p>$40.00</p>             
+                                        {% endif %}
+                                    </div>
+                                </div>
+                                <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'products:product_detail' product.slug %}">Ver producto</a></div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
+                    {% endfor %}
+                </div>
+            </div>  
+        {% endif %}
+
+        {% if featured_products %}
+            <div class="container px-4 px-lg-5 mt-2">
+                <h3 class="fw-semibold border-bottom text-uppercase fs-4">Productos destacados</h3>
+                <div class="row gx-3 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-start">
+                    {% for product in featured_products %}
+                            <div class="col mb-5">
+                                <div class="card h-100">
+                                    <img class="card-img-top object-fit-cover" src="{{ product.files.first.file.url }}" alt="{{ product.name}}" style="height: 150px"/>
+                                    <div class="card-body">
+                                        <div class="text-center">
+                                            <h4 class="fw-semibold">{{ product.name }}</h4>
+                                            {% if product.price %}
+                                                <p>$40.00</p>             
+                                            {% endif %}
+                                        </div>
+                                    </div>
+                                    <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'products:product_detail' product.slug %}">Ver producto</a></div>
+                                    </div>
+                                </div>
+                            </div>
+                    {% endfor %}
+                </div>
+            </div>
+            
+        {% endif %}
+
+        <div class="container px-4 px-lg-5 mt-2">
+            <h3 class="fw-semibold border-bottom text-uppercase fs-4">Mas productos</h3>
+            <div class="row gx-3 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-start">
+                {% for product in regular_products %}
+                        <div class="col mb-5">
+                            <div class="card h-100">
+                                <img class="card-img-top object-fit-cover" src="{{ product.files.first.file.url }}" alt="{{ product.name}}" style="height: 150px"/>
+                                <div class="card-body">
+                                    <div class="text-center">
+                                        <h4 class="fw-semibold">{{ product.name }}</h4>
+                                        {% if product.price %}
+                                            <p>$40.00</p>             
+                                        {% endif %}
+                                    </div>
+                                </div>
+                                <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'products:product_detail' product.slug %}">Ver producto</a></div>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>  
-            {% endfor %}
-        </div>      
-    </div>
-
-    <div>
-        <h2 class="fw-bolder fs-3 mb-4 text-uppercase text-start border-bottom">Productos en oferta</h1>
-
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-            {% for product in products %}
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="{{ product.files.first.file.url }}" class="card-img-top object-fit-contain bg-secondary" alt="{{ product.name }}" style="height: 200px;">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ product.name }}</h5>
-                            <p class="card-text">{{ product.description }}</p>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
-                        </div>
-                    </div>
-                </div>  
-            {% endfor %}
-        </div>      
-    </div>
-
-    <div>
-        <h2 class="fw-bolder fs-3 mb-4 text-uppercase text-start border-bottom">Todos los productos</h1>
-
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-            {% for product in products %}
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="{{ product.files.first.file.url }}" class="card-img-top object-fit-contain bg-secondary" alt="{{ product.name }}" style="height: 200px;">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ product.name }}</h5>
-                            <p class="card-text">{{ product.description }}</p>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
-                        </div>
-                    </div>
-                </div>  
-            {% endfor %}
-        </div>      
-    </div>
-
-
-</div>
-
+                {% endfor %}
+            </div>
+        </div>
+    </section>
 {% endblock content %}
