--- a/project/templates/products/partials/product_list.html
+++ b/project/templates/products/partials/product_list.html
@@ -37,7 +37,7 @@
 
       <td>{{ product.updated_at|date:"d/m/y H:i" }}</td>
       <td>
-        <button class="btn btn-secondary btn-sm" hx-get="{% url 'products:product_detail' product.slug %}" hx-target="#dialog"><i class="fas fa-eye"></i></button>
+        <button class="btn btn-secondary btn-sm" hx-get="{% url 'products:product_detail_admin' product.slug %}" hx-target="#dialog"><i class="fas fa-eye"></i></button>
         <button class="btn btn-success btn-sm" hx-get="{% url 'products:product_update' product.slug %}" hx-target="#dialog"><i class="fas fa-edit"></i></button>
         <button class="btn btn-danger btn-sm" hx-get="{% url 'products:product_confirm_delete' product.slug %}" hx-target="#dialog"><i class="fas fa-trash-alt"></i></button>          
       </td>
