--- a/project/templates/products/products.html
+++ b/project/templates/products/products.html
@@ -27,7 +27,7 @@
 
         <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
             <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Filtrar productos</h5>
+              <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">FILTROS</h5>
               <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
