--- a/project/templates/products/products.html
+++ b/project/templates/products/products.html
@@ -1,116 +1,51 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block header %}
+    <div class="p-4 text-center bg-header">
+        <img class="mx-auto m-3 d-block" src="{% static 'img/logo.png' %}" alt="" width="90">
+        <h1 class="display-5 fw-bold text-body-emphasis brand">
+            MUNDO CUOTAS</h1>
+        <div class="col-lg-6 mx-auto">
+        <h2 class="lead fw-normal mb-4">Comprá en cuotas solo con tu firma en Tandil, Ayacucho y ayacucho</h2>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+            <form 
+                class="input-group search-navbar mx-0 mx-md-5 mt-4 mt-md-0 pb-4" 
+                action="?consult={{ consult }}" 
+            >
+                <input name="consult" class="form-control" type="text" placeholder="¿Que estas buscando?" />
+                <button class="btn btn-primary" id="button-search" type="submit">
+                    <i class="fas fa-search"></i> Buscar
+                </button>
+            </form>   
+        </div>
+        </div>
+    </div>
+{% endblock header %}
 
 {% block content %}
-    <section class="container-fluid p-sm-5 p-0 pt-5 h-section">
-
-        <h2 class="fw-bolder display-5 mb-4 text-uppercase text-center">Productos</h2>
-       
-        <div class="mb-2">
-            <button class="btn btn-success" hx-get="{% url 'products:product_create' %}" hx-target="#dialog"><i class="fas fa-plus"></i> Agregar</button>
-            <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i class="fas fa-filter"></i> Filtrar</button>
-        </div>
-    
-        <div class="row">
-            <div 
-                class="col-12" 
-                id="results"
-                hx-get="{% url 'products:load_product_list' %}" 
-                hx-trigger="load" 
-                hx-target="#results"
-            >
-            </div>
-        </div>
-        
-        {% url 'products:index' as url %}
-        {% include 'components/index_back.html' with link=url %}    
-
-
-        <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
-            <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">FILTROS</h5>
-              <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-            </div>
-            <div class="offcanvas-body">
-                <form hx-get="{% url 'products:load_product_list' %}" hx-target="#results" hx-trigger="change from:input, productListChanged from:body, submit" method="get" class="p-3">
-
-                    <div class="input-group">
-                        <input name="consult" class="form-control" type="text" placeholder="Buscar..." />
-                        <button class="btn btn-success" id="button-search" type="submit">
-                            <i class="fas fa-search"></i> Buscar
-                        </button>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-6">
-                            <div class="form-group">
-                                <p class="mt-3 mb-2 fw-semibold border-bottom fs-5">Estado</p>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="status" value="1" id="status1">
-                                    <label class="form-check-label" for="status1">No publicados</label>
+    <section class="py-5">
+        <div class="container px-4 px-lg-5 mt-2">
+            <div class="row gx-3 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-start">
+                {% for product in products %}
+                        <div class="col mb-5">
+                            <div class="card h-100">
+                                <img class="card-img-top object-fit-cover" src="{{ product.files.first.file.url }}" alt="{{ product.name}}" style="height: 150px"/>
+                                <div class="card-body">
+                                    <div class="text-center">
+                                        <h4 class="fw-semibold">{{ product.name }}</h4>
+                                        {% if product.price %}
+                                            <p>$40.00</p>             
+                                        {% endif %}
+                                    </div>
                                 </div>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="status" value="2" id="status2">
-                                    <label class="form-check-label" for="status2">Publicados</label>
-                                </div>
-                            </div>
-                    
-                            <div class="form-group">
-                                <p class="mt-3 mb-2 fw-semibold border-bottom fs-5">Tipo</p>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="type" value="1" id="type1">
-                                    <label class="form-check-label" for="type1">Regular</label>
-                                </div>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="type" value="2" id="type2">
-                                    <label class="form-check-label" for="type2">Destacado</label>
-                                </div>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="type" value="3" id="type3">
-                                    <label class="form-check-label" for="type3">Oferta</label>
-                                </div>
-                            </div>
-                    
-                            <div class="form-group">
-                                <p class="mt-3 mb-2 fw-semibold border-bottom fs-5">Fecha</p>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="date" onclick="onlyOne(this)" value="1" id="date1">
-                                    <label class="form-check-label" for="date1">Recientes</label>
-                                </div>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="date" onclick="onlyOne(this)" value="2" id="date2">
-                                    <label class="form-check-label" for="date2">Antiguos</label>
+                                <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'products:product_detail' product.slug %}">Ver producto</a></div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6">
-                            <div class="form-group">
-                                <p class="mt-3 mb-2 fw-semibold border-bottom fs-5">Categorías</p>
-                                {% for category in categories %}
-                                    {% if not category.parent %}
-                                        <div class="mb-1">
-                                            <button type="button" class="btn px-2 btn-toggle d-inline-flex rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#{{ category.slug }}" aria-expanded="false" onclick="collapseOthers(this)">
-                                                {{ category.name }}
-                                            </button>
-                    
-                                            <div class="collapse" id="{{ category.slug }}">
-                                                <div class="btn-toggle-nav list-unstyled fw-normal pb-1 small mx-4">
-                                                    {% for subcategory in category.subcategories.all %}
-                                                        <div class="form-check">
-                                                            <input type="checkbox" class="form-check-input" id="{{ subcategory.slug }}" name="category" value="{{ subcategory.slug }}">
-                                                            <label class="form-check-label" for="{{ subcategory.slug }}">{{ subcategory }}</label>
-                                                        </div>
-                                                    {% endfor %}
-                                                </div>
-                                            </div>
-                                        </div>
-                                    {% endif %}
-                                {% endfor %}
-                            </div>
-                        </form>
-                        </div>
-                    </div> 
+                {% endfor %}
             </div>
         </div>
     </section>
-    
-{% endblock %}
+{% endblock content %}
