--- a/project/templates/users/message_list.html
+++ b/project/templates/users/message_list.html
@@ -2,26 +2,61 @@
 
 {% block content %}
     <section class="container-fluid p-sm-5 p-0 pt-5 h-section" hx-trigger="load, messageListChanged from:body" hx-get="{% url 'users:load_message_list' %}" hx-target="#results">
-        <h2 class="fw-bolder display-5 mb-4 text-uppercase text-center">Mensajes</h2>       
+        <h2 class="fw-bolder display-5 mb-4 text-uppercase text-center">Mensajes</h2>      
 
-        <div class="py-lg-4 py-3 col-12 col-md-8 col-lg-6 mx-auto">
-            <form 
-                class="input-group" 
-                hx-get="{% url 'users:load_message_list' %}?consult={{ consult }}" 
-                hx-target="#results"
-            >
-                <input name="consult" class="form-control" type="text" placeholder="Buscar Mensajes..." />
-                <button class="btn btn-success" id="button-search" type="submit">
-                    <i class="fas fa-search"></i> Buscar
-                </button>
-            </form>
+        <div class="mb-2">
+            <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i class="fas fa-filter"></i> Filtrar</button>
         </div>
 
         <div id="results">
         </div>
         
         {% url 'users:index' as url %}
-        {% include 'components/index_back.html' with link=url %}    
+        {% include 'components/index_back.html' with link=url %}   
+        
+        
+        <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
+            <div class="offcanvas-header">
+              <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">FILTROS</h5>
+              <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                <form hx-get="{% url 'users:load_message_list' %}" hx-target="#results" hx-trigger="change from:input, messageListChanged from:body, submit" method="get" class="p-3">
+
+                    <div class="input-group">
+                        <input name="consult" class="form-control" type="text" placeholder="Buscar..." />
+                        <button class="btn btn-success" id="button-search" type="submit">
+                            <i class="fas fa-search"></i> Buscar
+                        </button>
+                    </div>
+
+                            <div class="form-group">
+                                <p class="mt-3 mb-2 fw-semibold border-bottom fs-5">Estado</p>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="status" onclick="onlyOneStatus(this)" value="1" id="status1">
+                                    <label class="form-check-label" for="status1">No leidos</label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="status" onclick="onlyOneStatus(this)" value="2" id="status2">
+                                    <label class="form-check-label" for="status2">Leidos</label>
+                                </div>
+                            </div>
+
+                        <div class="form-group">
+                            <p class="mt-3 mb-2 fw-semibold border-bottom fs-5">Fecha</p>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" name="date" onclick="onlyOneDate(this)" value="1" id="date1">
+                                <label class="form-check-label" for="date1">Recientes</label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" name="date" onclick="onlyOneDate(this)" value="2" id="date2">
+                                <label class="form-check-label" for="date2">Antiguos</label>
+                            </div>
+                        </div>
+
+                </form>
+            </div>
+        </div>
     </section>
 
     {% endblock %}
