--- a/project/templates/products/contact.html
+++ b/project/templates/products/contact.html
@@ -2,11 +2,23 @@
 {% load static %}
 {% load widget_tweaks %}
 
+{% block header %}
+<div class="px-4 py-5 text-center bg-header">
+        
+    <h1 class="display-5 fw-bold text-body-emphasis brand">
+        <img src="{% static 'img/logo.png' %}" alt="Mundo Cuotas" width="95">
+        MUNDO CUOTAS
+    </h1>
 
+    <div class="col-lg-6 mx-auto">
+    <h2 class="lead fw-normal mb-4">¡Gracias por visitar MUNDO CUOTAS! </h2>
+    </div>
+</div>
+    
+{% endblock header %}
 {% block content %}
 <section id="contacto bg-header">
     <div class="fondo revelar derecha">
-        <h1 class="fw-bolder display-5 text-center">CONTACTANOS</h1>
         <p class="lead fw-semibold px-5 pt-5 mx-0 mx-md-5">¡Gracias por visitar Nobodies Tattoo! Si tienes alguna pregunta, consulta o simplemente quieres charlar sobre tu próximo diseño, no dudes en ponerte en contacto y me comunicaré contigo a la brevedad. Además, no olvides seguirme en las redes sociales para estar al tanto de las últimas novedades y diseños.</p>
 
         <ul class=" justify-content-center list-unstyled d-flex pb-5">
