--- a/project/templates/products/index.html
+++ b/project/templates/products/index.html
@@ -2,23 +2,15 @@
 {% load static %}
 
 {% block header %}
-    <div class="p-4 text-center bg-header">
-        <img class="mx-auto m-3 d-block" src="{% static 'img/logo.png' %}" alt="" width="90">
+    <div class="px-4 py-5 text-center bg-header">
+        
         <h1 class="display-5 fw-bold text-body-emphasis brand">
-            MUNDO CUOTAS</h1>
+            <img src="{% static 'img/logo.png' %}" alt="Mundo Cuotas" width="95">
+            MUNDO CUOTAS
+        </h1>
+
         <div class="col-lg-6 mx-auto">
         <h2 class="lead fw-normal mb-4">Comprá en cuotas solo con tu firma en Tandil, Ayacucho y ayacucho</h2>
-        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <form 
-                class="input-group search-navbar mx-0 mx-md-5 mt-4 mt-md-0 pb-4" 
-                action="?consult={{ consult }}" 
-            >
-                <input name="consult" class="form-control" type="text" placeholder="¿Que estas buscando?" />
-                <button class="btn btn-primary" id="button-search" type="submit">
-                    <i class="fas fa-search"></i> Buscar
-                </button>
-            </form>   
-        </div>
         </div>
     </div>
 {% endblock header %}
